[project]
name = "zexfrost-example"
version = "0.1.0"
description = "An example for zexfrost implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["gunicorn~=23.0.0", "uvicorn~=0.34.2", "zexfrost"]

[tool.uv.sources]
zexfrost = { git = "https://github.com/zex-fi/zexfrost" }
