[project]
name = "zexfrost-example"
version = "0.1.0"
description = "An example for zexfrost implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitcoin-utils~=0.6.8",
    "gunicorn~=23.0.0",
    "uvicorn~=0.34.2",
    "zexfrost",
]

[dependency-groups]
dev = ["pyright>=1.1.394", "ruff>=0.9.6"]


[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "setup.py",
    "build",
    "dist",
    "releases",
    "tools",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".github",
]
line-length = 120
indent-width = 4


[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes errors
    "W", # pycodestyle warnings
    "C", # mccabe complexity checker
    "B", # bugbear best practices checker
    "T", # mypy type errors
    "B", # flake8-bugbear best practices checker
    "I", # isort
]


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.uv.sources]
zexfrost = { git = "https://github.com/zex-fi/zexfrost" }
